# winefy

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/buy/: page.tsx
app/digitalizar/: page.tsx
app/inversiones/: page.tsx
app/lotes/: page.tsx
components/: AppProviders.tsx  CTASection.tsx  HeroSection.tsx  HowItWorksSection.tsx  InvestmentCard.tsx  Navigation.tsx  WhyInvestSection.tsx  WineCard.tsx
contracts/: .deployed_wine_token_testnet.env  DEPLOYMENT_GUIDE.md  IDENTIFY_WINE.md  QUICK_FIX.md  README.md  WINE_CONTRACTS_GUIDE.md  create_wine_token_example.sh  deploy_wine_token.sh  test_wine_status.sh  update_wine_token_wasm.sh
contracts/contracts/wine_factory/: Cargo.toml
contracts/contracts/wine_factory/src/: storage.rs
contracts/contracts/wine_token/: Cargo.toml
contracts/contracts/wine_token/src/: lib.rs  storage.rs
contracts_winefi/: .deployed_contracts_testnet.env  Cargo.toml  GUIA_RAPIDA.md  README.md  SETUP_DEVNET.md  deploy_and_test.sh  docker-compose.local.yml  quick_start.sh  setup_local_devnet.sh
contracts_winefi/contracts/bottle_factory/: Cargo.toml
contracts_winefi/contracts/bottle_factory/src/: error.rs  events.rs  lib.rs  storage.rs  test.rs
contracts_winefi/contracts/traceability_log/: Cargo.toml
contracts_winefi/contracts/traceability_log/src/: error.rs  events.rs  lib.rs  test.rs
contracts_winefi/contracts/transfer/: Cargo.toml
contracts_winefi/contracts/transfer/src/: constants.rs  error.rs  events.rs  lib.rs  storage.rs  test.rs
lib/: getUserInvestments.ts  supabaseClient.ts
supabase/: config.toml
(+25 files in other folders)
